<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/medium_padding"
        android:layout_marginHorizontal="@dimen/medium_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/selected_currency_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/selected_currency_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/selected_currency_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint=""
                        android:clickable="false"
                        android:focusable="false"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/currency" />

                <Spinner
                    android:id="@+id/selected_currency_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/medium_padding" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/xsmall_padding"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/input_currency_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_currency_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_currency_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="USD" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/xsmall_padding"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/output" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/result_currency_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/result_currency_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="USD"
                        android:clickable="false"
                        android:focusable="false"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/exchange_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_button"
        android:layout_marginTop="@dimen/medium_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>